build: dependency upgrades and CVE security pins
Central version bumps in project/Dependencies.scala plus ThisBuild-wide
dependencyOverrides in build.sbt to guarantee no transitive regressions:
- netty 4.1.127.Final (CVE-2025-58056/58057/55163)
- logback 1.5.34 (CVE-2023-6378/6481, CVE-2024-12798/12801)
- commons-lang3 3.20.0 (CVE-2025-48924); replaces EOL commons-lang 2.6 in core
- commons-io 2.18.0 (CVE-2024-47554)
- elastic4s 8.19.1 (ES 8.x), ignite 2.17.0 (CVE-2024-52577), pac4j-oidc 6.3.3

core util/package.scala switched StringUtils to commons-lang3. Version bumped
to 1.1.0.RC.76-SNAPSHOT. Also adds the JVM --add-opens=java.base/java.util flag
(adaWeb + core/Test) required by the env-var decryptor in a later commit.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Tw81FdRsG7kkGT2nPveFpx